# FlashBot_Zero

./: ArbFlashBot.sol  Cargo.toml  README.md  bot_contract_info.json  deploy.py  get_bytecode.py  rust-toolchain.toml
contracts/: ArbFlashBot.sol
prototype/: ArbFlashBot(py).sol  King_Scanner.py  README  async_bot.py  connect_test.py  decoder.py  deploy.py  hunter.py  parser.py  scanner.py  simulation.py  token_utils.py
src/: executor.rs  main.rs  math.rs  state.rs
