[package]
name = "l2_dominator"
version = "0.1.0"
edition = "2021"

[dependencies]
# الأساسيات
alloy = { version = "0.2.1", features = ["full"] }
alloy-primitives = { version = "0.7", features = ["serde"] }
alloy-sol-types = "0.7"

# المحاكاة
revm = { version = "14.0", features = ["serde", "std", "optional_balance_check"], default-features = false }
url = "2.5"

# الأدوات المساعدة
anyhow = "1.0"
futures-util = "0.3"
dotenv = "0.15"         
tokio = { version = "1", features = ["full", "tracing"] }
parking_lot = "0.12"
dashmap = "6.0"
fixed = "1.23"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
ethers-core = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"